<resources>
    <string name="app_name">Glossario</string>

    <!-- StartActivity -->
    <string name="create_account">Создать аккаунт</string>
    <!-- RegisterActivity -->
    <!-- Sign Up -->
    <string name="sign_up_with">Войдите через</string>
    <string name="sign_up_with_email">Или зарегистрируйтесь по электронной почте</string>
    <string name="sign_up_birthday_date">Дата рождения</string>
    <string name="sign_up_email">Адрес электронной почты</string>
    <string name="sign_up_password">Пароль</string>
    <string name="sign_up_example_birthday_date">Дата рождения</string>
    <string name="sign_up_example_email">Адрес электронной почты</string>
    <string name="sign_up_example_password">Пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_up_error_empty">Вы не заполнили все поля для регистрации!</string>
    <string name="sign_up_error_firebase">При создании вашего аккаунта произошла ошибка. Повторите еще раз</string>
    <string name="sign_up_error_save">Ошибка сохранения данных о пользователе: %1$s</string>
    <string name="sign_up_error_check">Ошибка проверки данных о пользователе: %1$s</string>
    <string name="sign_up_error_get">Произошла ошибка при получении данных</string>
    <string name="sign_up_nickname">Никнейм</string>
    <string name="sign_up_toolbar_title">Регистрация</string>
    <!-- Sign In -->
    <string name="sign_in_with_email">Или войдите по электронной почте</string>
    <string name="sign_in">Войти</string>
    <string name="sign_in_forget_password"><u>Забыли пароль?</u></string>
    <string name="sign_in_error_empty">Вы не заполнили все поля для входа!</string>
    <string name="sign_in_error_firebase">При входе в ваш аккаунт произошла ошибка. Повторите еще раз</string>
    <string name="sign_in_error_google">Произошла ошибка при входе по Google аккаунту. Попробуйте снова!</string>
    <string name="sign_in_toolbar_title">Вход</string>
    <!-- Reset Strings -->
    <string name="reset_empty">Пожалуйста, укажите вашу почту</string>
    <string name="reset_error_firebase">Произошла ошибка при отправке ссылки-сброса на ваш email!</string>
    <string name="reset_message">Письмо с ссылкой на изменение пароля было отправлено на вашу почту</string>
    <!-- Content descriptions -->
    <string name="content_description_google_icon">Google icon</string>
    <string name="content_description_facebook_icon">Facebook icon</string>
    <!-- Bottom navigation bar -->
    <string name="nav_home">Главная</string>
    <string name="nav_profile">Профиль</string>
    <string name="nav_library">Библиотека</string>

    <!-- Profile Strings -->
    <string name="profile_upload_sucsess">Загрузка изображения произошла успешно</string>
    <string name="profile_upload_error_get_url">Произошла ошибка при получении URL фотографии</string>
    <string name="profile_upload_error_get">Произошла ошибка при загрузке фотографии</string>
    <string name="profile_upload_error_not_found">Пользователь не найден</string>
    <string name="profile_settings">Настройки</string>

    <!-- Settings Strings -->
    <string name="settings_share_message">Текст поделиться</string>
    <string name="settings_share_title">Поделиться приложением через:</string>
    <string name="dev_email">s.markovtsev@gmail.com</string>
    <string name="settings_git">https://github.com/kawunus/Glossario</string>
    <string name="settings_chanel">https://t.me/+sOk1Kf3Wna5lOWYy</string>
    <string name="settings_personal">Персональные настройки</string>
    <string name="settings_change_nickname">Сменить никнейм</string>
    <string name="settings_change_password">Сменить пароль</string>
    <string name="settings_delete_account">Удалить аккаунт</string>
    <string name="settings_sign_out">Выйти из аккаунта</string>
    <string name="settings_app">Настройки приложения</string>
    <string name="settings_dark_theme">Тёмная тема</string>
    <string name="settings_support">Помощь и обратная связь</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_write_to_email">Написать нам на почту</string>
    <string name="settings_telegram">Telegram-канал разработчика</string>
    <string name="settings_github">Github проекта</string>
</resources>