<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".ui.activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:navigationIcon="@drawable/ic_arrow"
            android:title="@string/profile_settings"
            android:titleTextAppearance="@style/TextViewToolbarStyle" />

        <TextView
            style="@style/TextViewToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"
            android:text="@string/settings_personal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/changeNicknameView"
            style="@style/TextViewSettingsStyle"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:drawableTint="@color/settingsIconColor"
            android:text="@string/settings_change_nickname" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/changePasswordView"
            style="@style/TextViewSettingsStyle"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:drawableTint="@color/settingsIconColor"
            android:text="@string/settings_change_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/deleteAccountView"
            style="@style/TextViewSettingsStyle"
            android:drawableEnd="@drawable/ic_trash"
            android:drawableTint="@color/trashIconColor"
            android:text="@string/settings_delete_account" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/logOutView"
            style="@style/TextViewSettingsStyle"
            android:drawableEnd="@drawable/ic_log_out"
            android:drawableTint="@color/settingsIconColor"
            android:text="@string/settings_sign_out" />


        <TextView
            style="@style/TextViewToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:text="@string/settings_app" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/themeSwitcher1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yandex_sans_display_regular"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="20dp"
            android:text="@string/settings_dark_theme"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            android:thumbTintMode="screen"
            app:thumbTint="@color/thumbColor"
            app:trackTint="@color/trackColor" />

        <TextView
            style="@style/TextViewToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:text="@string/settings_support" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/shareView"
            style="@style/TextViewSettingsStyle"
            android:drawableEnd="@drawable/ic_share"
            android:drawableTint="@color/settingsIconColor"
            android:text="@string/settings_share" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/supportView"
            style="@style/TextViewSettingsStyle"
            android:drawableEnd="@drawable/ic_mail_24"
            android:drawableTint="@color/settingsIconColor"
            android:text="@string/settings_write_to_email" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/telegramView"
            style="@style/TextViewSettingsStyle"
            android:drawableEnd="@drawable/ic_telegram"
            android:drawableTint="@color/settingsIconColor"
            android:text="@string/settings_telegram" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/gitView"
            style="@style/TextViewSettingsStyle"
            android:drawableEnd="@drawable/ic_git"
            android:drawableTint="@color/settingsIconColor"
            android:text="@string/settings_github" />

    </LinearLayout>

</ScrollView>