<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:navigationIcon="@drawable/ic_arrow"
        android:title="@string/sign_up_toolbar_title"
        android:titleTextAppearance="@style/TextViewToolbarStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">


        <TextView
            style="@style/TextViewRegisterStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/signUpGoogleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/editTextBackgroundColor"
                android:contentDescription="@string/content_description_google_icon"
                android:paddingVertical="12dp"
                android:src="@drawable/ic_google" />

            <ImageButton
                android:id="@+id/signUpFacebookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/editTextBackgroundColor"
                android:contentDescription="@string/content_description_facebook_icon"
                android:paddingVertical="12dp"
                android:src="@drawable/ic_facebook" />
        </LinearLayout>

        <TextView
            android:id="@+id/titleTextView"
            style="@style/TextViewRegisterStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with_email" />

        <TextView
            android:id="@+id/nameTextView"
            style="@style/TextViewRegisterStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_nickname" />

        <EditText
            android:id="@+id/nameEditText"
            style="@style/EditTextRegisterStyle"
            android:drawableStart="@drawable/ic_person_19"
            android:hint="@string/sign_up_nickname"
            android:inputType="text"
            android:textColorHint="@color/editTextColor" />

        <TextView
            style="@style/TextViewRegisterStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_email" />

        <EditText
            android:id="@+id/emailEditText"
            style="@style/EditTextRegisterStyle"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/sign_up_example_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/editTextColor" />

        <TextView
            style="@style/TextViewRegisterStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_example_password"
            android:textColorHint="@color/editTextColor"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/editTextColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                style="@style/EditTextRegisterStyle"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/sign_up_example_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/forgetPasswordTextView"
            style="@style/TextViewRegisterStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/sign_in_forget_password"
            android:textColor="@color/forgetPassword"
            android:visibility="gone" />


        <Button
            android:id="@+id/signUpButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/mainColor"
            android:paddingVertical="8dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="19sp" />
    </LinearLayout>
</LinearLayout>